# gyak7

./: CMakeLists.txt  StaticText.cpp  StaticText.hpp  main.cpp  widgets.hpp
